--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,7 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     compile group: 'io.ktor', name: 'ktor-network', version: '1.0.0-beta-3'
     compile 'io.github.microutils:kotlin-logging:1.4.9'
-    compile 'ch.qos.logback:logback-classic:1.1.3'
-    compile 'ch.qos.logback:logback-core:1.1.3'
-    implementation "io.reactivex.rxjava2:rxjava:2.2.3"
+    compile "io.reactivex.rxjava2:rxjava:2.2.3"
 }
 
 compileKotlin {
